--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@ Released   : 20081230
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="/style.css" />
 <title>A Farewell to Colors by Bryant Smith</title>
 </head>
 
