--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,9 @@
 <% 
 for (var i in files) {
   var name = files[i];
-  var url = '/play/' + encodeURIComponent(name);
+  if (name.substr(name.length - 4, 4) == '.mp4') {
+    var url = '/play/' + encodeURIComponent(name);
 %>
           <p><a href="<%= url %>"><%= name %></a></p>
-<% } %>
+<% }} %>
 </div>
