--- a/views/play.ejs
+++ b/views/play.ejs
@@ -1,7 +1,7 @@
-<% var url = '/file?key=' + encodeURIComponent(key); %>
+<% var url = '/' + encodeURIComponent(key); %>
 <div class="contentText">
-<video width="320" height="240" controls>
+<video width="640" height="480" controls>
 <source src="<%= url %>" type="video/mp4">
-Your browser does not support the video tag.
+Your browser does not support the vdeo tag.
 </video>
 </div>
